Changed an of to between.

--- a/lectures/tps_rkhs/tps_rkhs.tex
+++ b/lectures/tps_rkhs/tps_rkhs.tex
@@ -144,7 +144,7 @@ Now we make use of repeated application of integration by parts -- keeping in mi
 \begin{equation*}
 \bigl(\eta_x^{(m)},f\bigr)_m = \bigl((-1)^m \Delta^m \eta_x^{(m)},f\bigr),
 \end{equation*}
-where $(\cdot,\cdot)$ is the duality pairing of $\mc{D},\mc{D}'$. Rewriting the left hand side of~\eqref{pf:rk-greens-1} in terms of this duality pairing, we obtain that $\eta_x^{(m)} \in \mc{H}_1$ satisfies the differential equation
+where $(\cdot,\cdot)$ is the duality pairing between $\mc{D}$ and $\mc{D}'$. Rewriting the left hand side of~\eqref{pf:rk-greens-1} in terms of this duality pairing, we obtain that $\eta_x^{(m)} \in \mc{H}_1$ satisfies the differential equation
 \begin{equation}
 \label{pf:rk-greens-2}
 (-1)^m \Delta^m F_x = \delta_{x} - \sum_{\nu = 1}^{M} \varphi_{\nu}(x) \delta_{z_\nu},
