Grad flow outline

--- a/lectures/ridgeless/ridgeless.tex
+++ b/lectures/ridgeless/ridgeless.tex
@@ -831,17 +831,18 @@ the top eigenvector of $\Sigma$, then one will find that for a large enough
 aspect ratio $\gamma_n = d/n$ (and large enough SNR), the optimal ridge tuning
 parameter will be zero. This phenomenon should be mathematically verifiable from 
 \eqref{eq:ridge_risk_limit2}, \eqref{eq:ridgeless_risk_limit2}, and I will add
-the details to these notes at a later point.   
+the details to these notes at a later point. Todo.
 
-(This relates to, but is simpler than, an asymptotic calculation from
-\citet{hastie2022surprises} for a latent feature model.) 
+This relates to, but is simpler than, an asymptotic calculation from
+\citet{hastie2022surprises} for a latent feature model. Todo: details here or in
+its own ``paragraph''?
 
 \paragraph{Degrees of freedom perspective.}
 
 Very recently, \citet{bach2023high} provided a nice re-interpretation of
 \eqref{eq:ridge_bias_limit2}, \eqref{eq:ridgeless_bias_limit2} and the
 corresponding variance results from the perspective of (effective) degrees of
-freedom. I will also add the details to these notes at a later point. 
+freedom. I will also add the details to these notes at a later point. Todo.
 
 \bibliographystyle{plainnat}
 \bibliography{../../common/ryantibs}
