--- a/homeworks/homework3/homework3.tex
+++ b/homeworks/homework3/homework3.tex
@@ -194,7 +194,7 @@ than one).
     \times d}$, let \smash{$\hbeta^{\mathrm{rg}}(\lambda)$} denote the ridge
   estimator, which solves  
   \[
-  \minimize_\beta \; \frac{1}{2} \|Y - X\beta\|_2^2 + \lambda \|\beta\|_2^2,
+  \minimize_\beta \; \|Y - X\beta\|_2^2 + \lambda \|\beta\|_2^2,
   \]
   for a tuning parameter $\lambda \geq 0$, and \smash{$\hbeta^{\mathrm{gf}}_t$}
   denote the gradient flow estimator, which solves 
