--- a/homeworks/homework3/homework3.tex
+++ b/homeworks/homework3/homework3.tex
@@ -121,7 +121,7 @@ random matrix theory conditions, as $n,d \to \infty$ and $d/n \to \gamma \in
 can consider a nonlinear feature model of the form 
 \begin{equation}
 \label{eq:nonlinear_features}
-X = \varphi(Z \Sigma^{1/2} W^\T),
+X = \varphi(Z \Gamma^{1/2} W^\T),
 \end{equation}
 for a covariance matrix $\Gamma \in \R^{k \times k}$, and a random matrix $Z \in
 \R^{n \times k}$ as before (except with $k$ in place of $d$). Moreover, now $W
