--- a/lectures/grad_flow/grad_flow.tex
+++ b/lectures/grad_flow/grad_flow.tex
@@ -3,7 +3,7 @@
 \def\ParSkip{} 
 \input{../../common/ryantibs}
 
-\title{Overparametrized Regression: Implicit Regularization \\ \smallskip
+\title{Implicit Regularization: Gradient Flow and Friends \\ \smallskip
 \large Advanced Topics in Statistical Learning, Spring 2023 \\ \smallskip
 Ryan Tibshirani }
 \date{}
